# FH

Betriebssysteme/Praktikum1/: Praktikum1.txt  phone.book  tests1.sh
Betriebssysteme/Praktikum2/: .gitignore  Praktikum2.1.sh  Praktikum2.2.sh  Praktikum2.3.sh  Praktikum2.4.sh  Praktikum2.5.sh  benutzer.txt  phone.book  results.csv
Betriebssysteme/Praktikum3/: Praktikum3.txt  create_dirs.sh  mehrfachkopieren.sh  mehrfachloeschen.sh  remove_dirs.sh
Betriebssysteme/Praktikum4/: user+num.txt  user+num_2.txt  user-add.sh  user-added-20221130-020412.txt  user-del-all.txt  user-delete.sh
Betriebssysteme/Praktikum5/: Praktikum5-Script.sh  Praktikum5.txt
Betriebssysteme/Praktikum6/: cd-mount.sh  cd-umount.sh
Datenbanken/: Mitschrift1.txt  databases.conf  firebird.conf  plugins.conf  replication.conf  security4.fdb
Datenbanken/Aufgabe1/: AUFGABE1.FDB  AUFGABE1_2.FDB  Aufgabe1.fgo  Aufgabe1.sql  Aufgabe1_2.fgo
Datenbanken/Aufgabe10/: .gitignore  Aufgabe10.txt  CMakeLists.txt  main.cpp
Datenbanken/Aufgabe10/src/: Buch.cpp  Buch.hpp  Database.cpp  Database.hpp  DbCLI.cpp  DbCLI.hpp  Index.hpp  SQLExecutor.hpp  SQLParser.hpp  SQLTokens.hpp  bvector.hpp  util.hpp
Datenbanken/Aufgabe11/: Aufgabe11.sql
Datenbanken/Aufgabe12/: AUFGABE12.FDB  Main.java  (+1 more)
GDI/: .~lock.BinTree Tests.odt#  .~lock.TP2_version_09.01.docx#  BinTree Tests.odt  H-01.txt  H-03.txt  H-04.txt  H-05.txt  H-06.txt  Laufzeit_Algorithmen_Tabelle.txt  TP2_version_09.01.docx  bericht.txt
IT-PJM/: KGB.ods
InternetTechnologien/: template.txt
Java/: Teamplanung.odt
Rechnernetze/: Aufzeichnung2.txt
(+113 files in other folders)
